--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "dotenv-expand": "5.1.0",
     "draft-js": "^0.11.5",
     "draftjs-to-html": "^0.9.1",
+    "driver.js": "^0.9.8",
     "echarts": "^4.8.0",
     "echarts-for-react": "^2.0.16",
     "eslint": "^6.6.0",
