--- a/package.json
+++ b/package.json
@@ -83,7 +83,6 @@
     "ts-pnp": "1.1.6",
     "url-loader": "2.3.0",
     "webpack": "4.42.0",
-    "webpack-dev-server": "3.10.3",
     "webpack-manifest-plugin": "2.2.0",
     "workbox-webpack-plugin": "4.3.1",
     "xlsx": "^0.16.4"
@@ -163,8 +162,18 @@
       "react-app"
     ]
   },
+  "plugins": [
+    [
+      "@babel/plugin-proposal-decorators",
+      {
+        "legacy": true
+      }
+    ]
+  ],
   "devDependencies": {
+    "css-vars-ponyfill": "^2.3.2",
     "gh-pages": "^3.1.0",
+    "react-app-rewired": "^2.1.6",
     "redux-devtools-extension": "^2.13.8"
   }
 }
